--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             </div>
             <div class="right">
                 <div class="image">
-                    <p class="secondary"><img src="../photos/Moms-Siam-Facebook-Cover-Image.jpg"</p>
+                    <p class="secondary"><img src="../photos/Moms-Siam-Facebook-Cover-Image.jpg"></p>
                 </div>
             </div>
         </div>    
@@ -44,22 +44,22 @@
     <div class="mid-section">
         
             <div class="icons">
-                <img class="foodndrinks" src="../photos/moms-owner.jpg" alt="thai middle aged woman"><h3>OWNER</h3>
+                <img class="foodndrinks" src="../photos/moms-owner.png" alt="thai middle aged woman"><h3>OWNER</h3>
                 <div class="icons-detail"><p><strong>Sukanya Pala-art</strong> the one who started it all</p></div>
             </div>     
 
             <div class="icons">
-                <img class="foodndrinks" src="../photos/moms-mussles.jpg" alt="cooked mussles app starter"><h3>APPS</h3>
+                <img class="foodndrinks" src="../photos/moms-mussles.png" alt="cooked mussles app starter"><h3>APPS</h3>
                 <div class="icons-detail"><p>Wide varieties of authentic starters that'll keep you wanting more!</p></div>
             </div>
 
             <div class="icons">
-                <img class="foodndrinks" src="../photos/moms-drunken-noodles.jpg" alt="stir fried flat rice noodles"><h3>ENTREE</h3>
+                <img class="foodndrinks" src="../photos/moms-drunken-noodles.png" alt="stir fried flat rice noodles"><h3>ENTREE</h3>
                 <div class="icons-detail"><p>Dishes that would make everyone feel like theyre at home! <em>We also accomidate dietry retrictions, let your sever know at the table.</em></p></div>
             </div>
 
             <div class="icons">
-                <img class="foodndrinks" src="../photos/moms-beers.jpg" alt="beer bootles"><h3>BEERS</h3>
+                <img class="foodndrinks" src="../photos/moms-beers.png" alt="beer bootles"><h3>BEERS</h3>
                 <div class="icons-detail"><p>We offer domestic and imported thai beers! Don't forget the chilled glass!</p></div>
             </div>
 
